--- a/decision_making_and_loop.ipynb
+++ b/decision_making_and_loop.ipynb
@@ -386,8 +386,7 @@
       "source": [
         "if boolean_expression:\n",
         "    statement(s)\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "USTDiRrQ2KDW"
@@ -414,7 +413,7 @@
         "id": "ZDRMFnFD2X0A",
         "outputId": "f1affb42-d085-4228-c580-3909cd75f266"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +458,7 @@
         "id": "rI6PFlge2qY_",
         "outputId": "fcb47e82-96a5-4d33-a985-0b1e3b0ea511"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,8 +507,7 @@
         "# Get integer input\n",
         "age = int(input(\"Enter your age: \"))\n",
         "if age >=18:\n",
-        "    print(\"The person can vote.\")\n",
-        ""
+        "    print(\"The person can vote.\")\n"
       ],
       "metadata": {
         "colab": {
@@ -518,7 +516,7 @@
         "id": "9sZOyhrk3i2Z",
         "outputId": "b9062ba4-406c-4b3e-9e5b-390e2ed088bb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +582,7 @@
         "id": "t91uVoum4hcz",
         "outputId": "732fba38-3e86-4156-bffb-d5d4779ddc34"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +638,7 @@
         "id": "mUMh2Vn05H2x",
         "outputId": "0c1bc614-5de8-4c58-9c10-c7a4d8231f66"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,7 +668,7 @@
         "id": "WpidkHmI5Q22",
         "outputId": "7986961a-c2a3-45e4-cbb7-516d5daaf336"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +712,7 @@
         "id": "Zz55Uet75rmf",
         "outputId": "6f9446aa-89cf-4d0a-ff76-9fdff7cd277c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +756,7 @@
         "id": "OBluJ63I5y2J",
         "outputId": "8a08ebe2-4fc5-4c0b-bfc4-21496b216bb1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +786,7 @@
         "id": "_MCLE6996MU1",
         "outputId": "f64d7829-0aa7-48f7-f5b7-fb073262e54a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +830,7 @@
         "id": "gn1Dt3_w6VtB",
         "outputId": "bcc734bc-0183-4623-fb7e-7e090498364d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +890,7 @@
         "id": "cbGw-FAo66I3",
         "outputId": "4e7f280c-5693-413e-ccb1-782b830fd7d2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,7 +929,7 @@
         "id": "LK1tu74r7D8j",
         "outputId": "ec6e0ebe-cb4c-4d52-c8e8-05f2f7cc3d4d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +961,7 @@
         "id": "Y4t0GCxY7h8J",
         "outputId": "369d89b6-1050-4c1c-c85f-a0295fb1b5d2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +1001,7 @@
         "id": "XZEgVXXP7plu",
         "outputId": "4965cb97-5764-455e-f963-4c1a98438ecc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1041,7 +1039,7 @@
         "id": "j07JnCx7759M",
         "outputId": "7f895dc8-b996-4ef3-fbdd-71e9dee3fd4e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,7 +1089,7 @@
         "id": "hmKDtPoI8DL_",
         "outputId": "734f1665-d3df-4943-d0fb-1e5a313907d8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,7 +1182,7 @@
         "id": "DriUXPQ-9XKA",
         "outputId": "c4f3ea77-27b7-4f13-a321-f38a7e996082"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1223,7 @@
         "id": "ZDLBRSzr9jwm",
         "outputId": "328d61ab-7485-485b-cd5d-a8d175e08512"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,7 +1265,7 @@
         "id": "HAQvgj1C-LeR",
         "outputId": "2d6a1f7e-b2d6-4a3e-855c-50f7b43da0ca"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1300,7 @@
         "id": "b9qqns2I-SOr",
         "outputId": "1e6f8670-294b-410d-882c-79c3a109069a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1332,7 @@
         "id": "-WTztyhY-tzN",
         "outputId": "1aef4fb7-11aa-464a-fe52-1048e67fa879"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1379,7 +1377,7 @@
         "id": "P4mIcnYu_GzC",
         "outputId": "8cd0bc73-ae97-43e6-aa8a-79a4c6ca91c1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
