--- a/decision_making_and_loop.ipynb
+++ b/decision_making_and_loop.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSWsDMWOOFQA0C3izhjGyU"
+      "authorship_tag": "ABX9TyOVbWqzhUgdoEd+6O86oRUG"
     },
     "kernelspec": {
       "name": "python3",
@@ -1396,6 +1396,423 @@
       "metadata": {
         "id": "xyUok6Tu_TPI"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while condition:\n",
+        "    statement(s)"
+      ],
+      "metadata": {
+        "id": "TbNpJux62Kx-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#infinite loop\n",
+        "count = 1\n",
+        "\n",
+        "# Loop continues as long as count is 3 or less\n",
+        "while count <= 3:\n",
+        "    print(\"I am inside a loop.\")\n",
+        "    print(\"Looping is interesting.\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "PkxFn_4K23P2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#infinite loop\n",
+        "while True:\n",
+        "    print(\"I am inside a loop.\")\n",
+        "    print(\"Looping is interesting.\")"
+      ],
+      "metadata": {
+        "id": "7xiUPCwk3DVR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#corrected infinite loop\n",
+        "count = 1\n",
+        "\n",
+        "# Loop continues as long as count is 3 or less\n",
+        "while count <= 3:\n",
+        "    print(\"I am inside a loop.\")\n",
+        "    print(\"Looping is interesting.\")\n",
+        "\n",
+        "    # Increment count by 1 in each iteration\n",
+        "    count = count + 1\n",
+        "\n",
+        "print(\"OUTSIDE THE LOOP\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2QcSVbPm3Qa9",
+        "outputId": "65481421-96a1-4def-9555-04d7fbe06675"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am inside a loop.\n",
+            "Looping is interesting.\n",
+            "I am inside a loop.\n",
+            "Looping is interesting.\n",
+            "I am inside a loop.\n",
+            "Looping is interesting.\n",
+            "OUTSIDE THE LOOP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Print Multiple Times with while Loop\n",
+        "# Take integer input\n",
+        "n = int(input(\"Times to print 'Python': \"))\n",
+        "i = 1\n",
+        "\n",
+        "# Loop until i is less than or equal to n\n",
+        "while i <= n:\n",
+        "    print(\"Python\")\n",
+        "    i = i + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BapuneT73_hO",
+        "outputId": "32aae290-2390-46df-f1aa-c44a06e80a20"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Times to print 'Python': 5\n",
+            "Python\n",
+            "Python\n",
+            "Python\n",
+            "Python\n",
+            "Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a program to print numbers from n to 1 using a while loop.\n",
+        "\n",
+        "Get an integer input from the user and store it in variable n.\n",
+        "Use a while loop to print values from n to 1.\n",
+        "Assumption: The user will always enter a positive integer."
+      ],
+      "metadata": {
+        "id": "bVloJLHe5TVj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get integer input\n",
+        "n = int(input(\"Enter the value of n: \"))\n",
+        "while n>=1:\n",
+        "    print(n);\n",
+        "    n=n-1;"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "etXE0px65Xbq",
+        "outputId": "7559f744-8617-4379-b0a2-bb34f605157d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the value of n: 2\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Description\n",
+        "Write a program to simulate a rocket launch countdown.\n",
+        "\n",
+        "The program should display the countdown timer alongside the seconds elapsed at each step.\n",
+        "\n",
+        "Write a program that:\n",
+        "\n",
+        "Take the starting countdown value (in seconds) as input.\n",
+        "Use a while loop to display the remaining countdown time and elapsed time at each step. The loop should terminate when countdown becomes less than 0.\n",
+        "Print a separator (---) after every update for better readability.\n",
+        "End the program with the message: \"Liftoff!\".\n",
+        "Hint: You need to update both the countdown and elapsed variables inside the loop."
+      ],
+      "metadata": {
+        "id": "oNSz3_nZ5-J7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Take integer input\n",
+        "countdown = int(input(\"Enter starting countdown number: \"))\n",
+        "\n",
+        "elapsed = 0\n",
+        "\n",
+        "while countdown>=0:\n",
+        "    print(f\"Time left: {countdown} seconds\")\n",
+        "    print(f\"Elapsed: {elapsed} seconds\")\n",
+        "    print(\"---\")\n",
+        "    countdown -= 1\n",
+        "    elapsed += 1\n",
+        "\n",
+        "# Print the \"Liftoff!\" message\n",
+        "print(\"Liftoff!\");\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SSdnpM-56anD",
+        "outputId": "c59ddd82-3c42-4868-cc0e-5db2786055c7"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter starting countdown number: 5\n",
+            "Time left: 5 seconds\n",
+            "Elapsed: 0 seconds\n",
+            "---\n",
+            "Time left: 4 seconds\n",
+            "Elapsed: 1 seconds\n",
+            "---\n",
+            "Time left: 3 seconds\n",
+            "Elapsed: 2 seconds\n",
+            "---\n",
+            "Time left: 2 seconds\n",
+            "Elapsed: 3 seconds\n",
+            "---\n",
+            "Time left: 1 seconds\n",
+            "Elapsed: 4 seconds\n",
+            "---\n",
+            "Time left: 0 seconds\n",
+            "Elapsed: 5 seconds\n",
+            "---\n",
+            "Liftoff!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Complete program\n",
+        "\n",
+        "n = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "while n != 0:\n",
+        "   print(n)\n",
+        "   n = int(input(\"Enter a number: \"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S6o1Y5Ff6sIi",
+        "outputId": "164071a2-1be4-48ba-da54-d5338e5b71d3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 5\n",
+            "5\n",
+            "Enter a number: 4\n",
+            "4\n",
+            "Enter a number: 6\n",
+            "6\n",
+            "Enter a number: 1\n",
+            "1\n",
+            "Enter a number: 2\n",
+            "2\n",
+            "Enter a number: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sum\n",
+        "# Take user input\n",
+        "n = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Loop as long as number is not 0\n",
+        "while n != 0:\n",
+        "\n",
+        "    # The initial value of total will be 0\n",
+        "    total = 0\n",
+        "\n",
+        "    # Add the value of n to total\n",
+        "    total = total + n\n",
+        "\n",
+        "    # Take the input again\n",
+        "    n = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Display the total\n",
+        "print(f\"Total: {total}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ljzMVQYA6zxn",
+        "outputId": "724ce483-9ed8-484e-b6c5-6f981b76afdb"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 10\n",
+            "Enter a number: 20\n",
+            "Enter a number: 0\n",
+            "Total: 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Description\n",
+        "Write a program to calculate the sum of positive numbers entered by the user.\n",
+        "\n",
+        "The program should accept input as long as the user enters positive numbers.\n",
+        "If the user enters a negative number or zero, the loop should terminate.\n",
+        "Don't include the final number (0 or negative number)."
+      ],
+      "metadata": {
+        "id": "vaGfg9HQ7axr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize sum to 0\n",
+        "total_sum = 0.0\n",
+        "\n",
+        "# Loop to accept input\n",
+        "while True:\n",
+        "    number = float(input(\"Enter a number: \"))\n",
+        "\n",
+        "    if number < 0:  # If the number is negative, exit the loop\n",
+        "        break\n",
+        "\n",
+        "    total_sum += number  # Add the positive number to the total sum\n",
+        "\n",
+        "# Output the sum of positive numbers\n",
+        "print(f\"The sum of positive numbers is: {total_sum}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yFTLkM5z8Ujy",
+        "outputId": "e616c341-8501-45f9-eae6-edcef3a93fe3"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "Enter a number: 5\n",
+            "Enter a number: -5\n",
+            "The sum of positive numbers is: 10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#another method\n",
+        "# Take user input\n",
+        "n = float(input())  # Accept input without prompt\n",
+        "\n",
+        "# Initialize total as 0\n",
+        "total = 0\n",
+        "\n",
+        "# Loop as long as the number is positive\n",
+        "while n > 0:  # Continue loop as long as n is positive\n",
+        "\n",
+        "    # Add the value of n to total\n",
+        "    total += n\n",
+        "\n",
+        "    # Take the input again\n",
+        "    n = float(input())  # Accept next input\n",
+        "\n",
+        "# Display the total\n",
+        "print(total)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fVaI1QdL9mcO",
+        "outputId": "64618f69-54d8-4dc5-e42d-aa1df53325d9"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "10\n",
+            "2\n",
+            "0\n",
+            "17.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
