for loop completed

--- a/decision_making_and_loop.ipynb
+++ b/decision_making_and_loop.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVbWqzhUgdoEd+6O86oRUG"
+      "authorship_tag": "ABX9TyN3mVmRRnmbHjbaNRFmFvCx"
     },
     "kernelspec": {
       "name": "python3",
@@ -1418,8 +1418,7 @@
         "# Loop continues as long as count is 3 or less\n",
         "while count <= 3:\n",
         "    print(\"I am inside a loop.\")\n",
-        "    print(\"Looping is interesting.\")\n",
-        ""
+        "    print(\"Looping is interesting.\")\n"
       ],
       "metadata": {
         "id": "PkxFn_4K23P2"
@@ -1464,7 +1463,7 @@
         "id": "2QcSVbPm3Qa9",
         "outputId": "65481421-96a1-4def-9555-04d7fbe06675"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1501,7 +1500,7 @@
         "id": "BapuneT73_hO",
         "outputId": "32aae290-2390-46df-f1aa-c44a06e80a20"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1545,7 @@
         "id": "etXE0px65Xbq",
         "outputId": "7559f744-8617-4379-b0a2-bb34f605157d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1605,7 +1604,7 @@
         "id": "SSdnpM-56anD",
         "outputId": "c59ddd82-3c42-4868-cc0e-5db2786055c7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1652,7 @@
         "id": "S6o1Y5Ff6sIi",
         "outputId": "164071a2-1be4-48ba-da54-d5338e5b71d3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1703,7 +1702,7 @@
         "id": "ljzMVQYA6zxn",
         "outputId": "724ce483-9ed8-484e-b6c5-6f981b76afdb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1755,7 @@
         "id": "yFTLkM5z8Ujy",
         "outputId": "e616c341-8501-45f9-eae6-edcef3a93fe3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,31 +1774,27 @@
       "source": [
         "#another method\n",
         "# Take user input\n",
-        "n = float(input())  # Accept input without prompt\n",
+        "n = float(input())\n",
         "\n",
         "# Initialize total as 0\n",
         "total = 0\n",
-        "\n",
-        "# Loop as long as the number is positive\n",
-        "while n > 0:  # Continue loop as long as n is positive\n",
-        "\n",
-        "    # Add the value of n to total\n",
+        "while n > 0:\n",
         "    total += n\n",
         "\n",
         "    # Take the input again\n",
-        "    n = float(input())  # Accept next input\n",
+        "    n = float(input())\n",
         "\n",
         "# Display the total\n",
         "print(total)\n"
       ],
       "metadata": {
+        "id": "fVaI1QdL9mcO",
+        "outputId": "64618f69-54d8-4dc5-e42d-aa1df53325d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "fVaI1QdL9mcO",
-        "outputId": "64618f69-54d8-4dc5-e42d-aa1df53325d9"
+        }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1810,6 +1805,423 @@
             "2\n",
             "0\n",
             "17.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **For Loop**"
+      ],
+      "metadata": {
+        "id": "CD2gbmaVbYSb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterator Over a String\n",
+        "name = \"Eva\"\n",
+        "\n",
+        "for character in name:\n",
+        "    print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MXPPLATFVwZ3",
+        "outputId": "21847dbe-afaf-42a1-c65d-793ceb5980b2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "Hello\n",
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Access Elements\n",
+        "name = \"Eva\"\n",
+        "\n",
+        "for item in name:\n",
+        "    # Access item\n",
+        "    print(item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6nAy-3SnaNeD",
+        "outputId": "778fee95-9947-4ca1-c772-86141b5d5ad5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "E\n",
+            "v\n",
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Take string input\n",
+        "text = input(\"Enter a string: \")\n",
+        "for items in text:\n",
+        "    print(\"Item:\",items)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3omZqtHta7Ik",
+        "outputId": "cef9e3b7-9550-4d58-ac76-df7839e1e07b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: Aakriti\n",
+            "Item: A\n",
+            "Item: a\n",
+            "Item: k\n",
+            "Item: r\n",
+            "Item: i\n",
+            "Item: t\n",
+            "Item: i\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **List Sequence**"
+      ],
+      "metadata": {
+        "id": "6G15WGUzbBdC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = [\"English\", \"German\", \"French\"]\n",
+        "for language in languages:\n",
+        "    print(language)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3GfcRl4abG8g",
+        "outputId": "bf43b9b0-6063-43bd-b4cd-1fd67ca36942"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "English\n",
+            "German\n",
+            "French\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **The range() Sequence**\n",
+        "# A sequence of integers from 1 to 5 (6 is excluded)\n",
+        "range(1, 6)\n",
+        "\n",
+        "# A sequence of integers from 0 to 10 (11 is excluded)\n",
+        "range(0, 11)\n"
+      ],
+      "metadata": {
+        "id": "v1DPQbmjbeZD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterate over a sequence from 1 to 4\n",
+        "for item in range(1, 5):\n",
+        "    print(f\"number: {item}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mt9vz86zbo15",
+        "outputId": "c49e8a2d-e16d-41db-82c8-f8aa98b863fa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number: 1\n",
+            "number: 2\n",
+            "number: 3\n",
+            "number: 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get user input\n",
+        "number = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "# Print sequence from 0 to number (exclusive)\n",
+        "for i in range(number):\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X1xDtYfyqS4C",
+        "outputId": "64931f1c-909e-436f-ae43-c7e6302ef70c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 5\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sum\n",
+        "n = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "total = 0\n",
+        "\n",
+        "for i in range(1, n+1):\n",
+        "   total = total + i\n",
+        "\n",
+        "print(f\"Total = {total}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DQZ4-jChqiS4",
+        "outputId": "d2005703-c983-4677-a2cf-37f6c81dc584"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 5\n",
+            "Total = 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# factorial\n",
+        "# Get user input\n",
+        "n = int(input())\n",
+        "\n",
+        "# Initialize factorial to 1\n",
+        "factorial = 1\n",
+        "\n",
+        "# Compute factorial using a for loop\n",
+        "for i in range(1, n + 1):\n",
+        "    factorial =factorial * i  # Multiply each number to factorial\n",
+        "\n",
+        "# Print the result\n",
+        "print(factorial)"
+      ],
+      "metadata": {
+        "id": "m60lZ6Ru3Tcw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5c8d738-4d64-49fa-fb4c-80fd58c1cb61"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "3628800\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if statement inside a for loop\n",
+        "for number in range(1, 11):\n",
+        "\n",
+        "    # Check if number is even\n",
+        "    if number % 2 == 0:\n",
+        "        print(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y2kCiUveROqL",
+        "outputId": "664012ce-da66-455b-cc8e-00fadea79bad"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for number in range(1, 10):\n",
+        "\n",
+        "    if number % 3 == 0:\n",
+        "        print(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b04ln8KkRX0t",
+        "outputId": "394130fe-1583-46b4-c594-222ba28fd866"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "6\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# odd number print\n",
+        "# Get integer input\n",
+        "n = int(input())\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "    if i% 2 !=0:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BNiVdnybR4M5",
+        "outputId": "0f9b3869-3f20-44d9-ace6-edf712bc3929"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Description\n",
+        "Write a program that prints numbers that are multiples of both 3 and 5 between 1 and n.\n",
+        "\n",
+        "Get an integer input from the user and store it to n. We'll assume the user will enter a positive integer.\n",
+        "Use a loop to iterate from 1 to n (inclusive).\n",
+        "In each iteration, check if the number is a multiple of both 3 and 5. If it is, print the number.\n",
+        "Hint: You need to use the and operator in the if statement condition."
+      ],
+      "metadata": {
+        "id": "bf3DyZ9jSPWr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get integer input\n",
+        "n = int(input(\"Enter a positive integer: \"))\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "    if i % 3 ==0 and i%5==0:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8D55azD2SPDc",
+        "outputId": "2ace6e66-f7c5-4ec4-bab4-091268d93094"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a positive integer: 10\n"
           ]
         }
       ]
