--- a/decision_making_and_loop.ipynb
+++ b/decision_making_and_loop.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3mVmRRnmbHjbaNRFmFvCx"
+      "authorship_tag": "ABX9TyMyR++son2Pw/TvdD4JzIry"
     },
     "kernelspec": {
       "name": "python3",
@@ -2077,7 +2077,7 @@
         },
         "outputId": "d5c8d738-4d64-49fa-fb4c-80fd58c1cb61"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2106,7 +2106,7 @@
         "id": "Y2kCiUveROqL",
         "outputId": "664012ce-da66-455b-cc8e-00fadea79bad"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2136,7 +2136,7 @@
         "id": "b04ln8KkRX0t",
         "outputId": "394130fe-1583-46b4-c594-222ba28fd866"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,7 +2167,7 @@
         "id": "BNiVdnybR4M5",
         "outputId": "0f9b3869-3f20-44d9-ace6-edf712bc3929"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2215,13 +2215,644 @@
         "id": "8D55azD2SPDc",
         "outputId": "2ace6e66-f7c5-4ec4-bab4-091268d93094"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter a positive integer: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Break and COntinue**"
+      ],
+      "metadata": {
+        "id": "NrAt-3-1SsG5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python break Statement\n",
+        "# Iterate from 1 to 5\n",
+        "for i in range(1, 6):\n",
+        "    print(i)\n",
+        "\n",
+        "    # The break statement\n",
+        "    break\n",
+        "\n",
+        "print(\"This is outside the loop.\")\n"
+      ],
+      "metadata": {
+        "id": "Irsgg-a7SxTz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2bf84165-12a7-4cb9-c70e-25d939965e2e"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "This is outside the loop.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# break if else\n",
+        "numbers = [10, 15, 20, -5, 30, -40]\n",
+        "for number in numbers:\n",
+        "\n",
+        "    # Exit loop is negative number is found\n",
+        "    if number < 0:\n",
+        "        break\n",
+        "\n",
+        "    # Print the number because it's not negative\n",
+        "    print(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xnVbpbRNV00b",
+        "outputId": "36902e27-2f13-4119-cae5-59e36f055998"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "15\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get an integer input\n",
+        "n = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "for i in range(1,n+1):\n",
+        "    print(i)\n",
+        "    if i==5:\n",
+        "        break\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "drpY6598We0q",
+        "outputId": "737e1dfd-1b00-45b0-c732-6319ae760205"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 10\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = float(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Until the number is zero, iterate the loop\n",
+        "while n != 0:\n",
+        "    print(n)\n",
+        "\n",
+        "    # Take the input again\n",
+        "    n = float(input(\"Enter a number: \"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cGaOkFm_WuhW",
+        "outputId": "e7a2e80c-3024-436e-e02a-5e24a667e89c"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 10\n",
+            "10.0\n",
+            "Enter a number: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#infinite loop\n",
+        "while True:\n",
+        "\n",
+        "    n = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "    # If users enters 0, end the loop\n",
+        "    if n == 0:\n",
+        "        break\n",
+        "\n",
+        "    # Display the number if user doesn't enter 0\n",
+        "    print(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w_lrSra9W7cQ",
+        "outputId": "b218e7a8-8e1d-46d3-f377-4fb4def70e0a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 5\n",
+            "5\n",
+            "Enter a number: 10\n",
+            "10\n",
+            "Enter a number: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Python Continue Statement**\n",
+        "The continue statement skips the rest of the code in the current iteration and moves directly to the next iteration of the loop."
+      ],
+      "metadata": {
+        "id": "t7oNStjhXBry"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# iterate from i = 1 to 5\n",
+        "for i in range(1, 6):\n",
+        "\n",
+        "    if i == 3:\n",
+        "        continue\n",
+        "\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n1lr9jc2XHr_",
+        "outputId": "3938e8aa-4f4a-4a39-e9ba-185abde7bf43"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#skip is number is even else print odd numbers\n",
+        "# Take integer input\n",
+        "n = int(input(\"Enter an integer: \"))\n",
+        "for i in range(1,n+1):\n",
+        "    if i % 2 ==0:\n",
+        "        continue\n",
+        "    else:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mzLsVGKrYZAu",
+        "outputId": "b2497abc-576a-4781-e3b9-64fa3d5e436d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 5\n",
+            "1\n",
+            "3\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [10, -3, 5, -1, 0, 7, -8, 2]\n",
+        "\n",
+        "# Initialize total\n",
+        "total = 0\n",
+        "\n",
+        "for number in numbers:\n",
+        "\n",
+        "    # Skip negative numbers\n",
+        "    if number < 0:\n",
+        "        continue\n",
+        "\n",
+        "    # Terminate the loop if the number is 0\n",
+        "    if number == 0:\n",
+        "        break\n",
+        "\n",
+        "    # Add positive numbers to the total\n",
+        "    total = total + number\n",
+        "\n",
+        "# Display the total\n",
+        "print(\"Total of positive numbers:\", total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pLXYaMg5YoQ-",
+        "outputId": "95925dfb-4063-49a4-e6bc-ab80ad022f0d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total of positive numbers: 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Recap COntrol Flow statement\n",
+        "# Input: Ask the user to enter an integer\n",
+        "number = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "# Check if the number is positive and even\n",
+        "if number > 0 and number % 2 == 0:\n",
+        "    print(\"Positive and even\")\n",
+        "\n",
+        "# Check if the number is positive and odd\n",
+        "elif number > 0 and number % 2 != 0:\n",
+        "    print(\"Positive and odd\")\n",
+        "\n",
+        "# Check if the number is negative and even\n",
+        "elif number < 0 and number % 2 == 0:\n",
+        "    print(\"Negative and even\")\n",
+        "\n",
+        "# Check if the number is negative and odd\n",
+        "elif number < 0 and number % 2 != 0:\n",
+        "    print(\"Negative and odd\")\n",
+        "\n",
+        "# If the number is zero\n",
+        "else:\n",
+        "    print(\"The number is zero\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O4i8ei-UZiRg",
+        "outputId": "06d979fe-dd5d-484a-8835-d674ea04619d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: -2\n",
+            "Negative and even\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiplication Table\n",
+        "number = int(input(\"Multiplication of: \"))\n",
+        "\n",
+        "# Iterate a loop from 1 to 5\n",
+        "for i in range(1, 6):\n",
+        "    # Compute product\n",
+        "    product = number * i\n",
+        "\n",
+        "    # Display product in the desired format\n",
+        "    print(f\"{number} * {i} = {product}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bvsqd1MGZziw",
+        "outputId": "5200c2b0-a091-4607-cf10-a93443054bc7"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Multiplication of: 5\n",
+            "5 * 1 = 5\n",
+            "5 * 2 = 10\n",
+            "5 * 3 = 15\n",
+            "5 * 4 = 20\n",
+            "5 * 5 = 25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sum of only positive numbers\n",
+        "# Initialize the total to 0\n",
+        "total = 0\n",
+        "\n",
+        "while True:\n",
+        "    number = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "    # If the number is negative, skip this iteration\n",
+        "    if number < 0:\n",
+        "        continue\n",
+        "\n",
+        "    # If the number is zero, terminate the loop\n",
+        "    if number == 0:\n",
+        "        break\n",
+        "\n",
+        "    # If the number is positive, add it to total\n",
+        "    total = total + number\n",
+        "\n",
+        "print(f\"Total: {total}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TQdTxNemaS6q",
+        "outputId": "c51639eb-ce55-43f5-a6f9-38929c715f4e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "Enter a number: 10\n",
+            "Enter a number: 15\n",
+            "Enter a number: 20\n",
+            "Enter a number: 0\n",
+            "Total: 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print Numbers within a Range\n",
+        "while True:\n",
+        "    num = int(input(\"Enter an integer: \"))\n",
+        "    if 1 <= num <= 100:\n",
+        "        print(num)\n",
+        "    else:\n",
+        "        break\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "biez3de2bEP0",
+        "outputId": "3ce824a5-860e-4d9f-a5ee-4222024d62d0"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer: 10\n",
+            "10\n",
+            "Enter an integer: 5\n",
+            "5\n",
+            "Enter an integer: 20\n",
+            "20\n",
+            "Enter an integer: 101\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Recap I**"
+      ],
+      "metadata": {
+        "id": "1Vy8FuFRbU9i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if else\n",
+        "car_color = \"black\"\n",
+        "\n",
+        "if car_color == \"white\":\n",
+        "    print(\"You have a white car.\")\n",
+        "else:\n",
+        "    print(\"You do not have a white car.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "svtggzjFbcTX",
+        "outputId": "98fe1932-1824-4a10-9955-b8252e71b555"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You do not have a white car.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# while\n",
+        "# Program to take input until user enters a positive integer\n",
+        "number = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "while number <= 0:\n",
+        "    number = int(input(\"Enter an integer: \"))\n",
+        "\n",
+        "print(f\"Positive number you entered: {number}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "heJO2cqYbiPB",
+        "outputId": "cc90094f-3183-47c2-d8ec-3bf70c62f502"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 10\n",
+            "Positive number you entered: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for loop\n",
+        "# Loop through numbers from 1 to 3 (inclusive)\n",
+        "for i in range(1, 4):\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1UJTuS09bmT4",
+        "outputId": "af7bb045-557e-436f-f22f-905953895c11"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Recap (II)**"
+      ],
+      "metadata": {
+        "id": "-8J5KhagbqHq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Break statement\n",
+        "# Iterate from 1 to 100\n",
+        "for i in range(1, 101):\n",
+        "\n",
+        "    # Terminate the loop when i becomes 3\n",
+        "    if i == 3:\n",
+        "        break\n",
+        "\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sIOwJdnTbvV9",
+        "outputId": "86cb525c-3f87-449e-f8b3-95047418b4ae"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Continue Statement\n",
+        "# Iterate from 1 to 5\n",
+        "for i in range(1, 6):\n",
+        "\n",
+        "    # Skip printing when i is 3 or 4\n",
+        "    if i == 3 or i == 4:\n",
+        "        continue\n",
+        "\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Khs2td1Mb1MM",
+        "outputId": "da285479-20f6-45ef-8913-ec1a14d3d764"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "5\n"
           ]
         }
       ]
