--- a/decision_making_and_loop.ipynb
+++ b/decision_making_and_loop.ipynb
@@ -2255,7 +2255,7 @@
         },
         "outputId": "2bf84165-12a7-4cb9-c70e-25d939965e2e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2288,7 +2288,7 @@
         "id": "xnVbpbRNV00b",
         "outputId": "36902e27-2f13-4119-cae5-59e36f055998"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2310,8 +2310,7 @@
         "for i in range(1,n+1):\n",
         "    print(i)\n",
         "    if i==5:\n",
-        "        break\n",
-        ""
+        "        break\n"
       ],
       "metadata": {
         "colab": {
@@ -2320,7 +2319,7 @@
         "id": "drpY6598We0q",
         "outputId": "737e1dfd-1b00-45b0-c732-6319ae760205"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2355,7 +2354,7 @@
         "id": "cGaOkFm_WuhW",
         "outputId": "e7a2e80c-3024-436e-e02a-5e24a667e89c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2390,7 +2389,7 @@
         "id": "w_lrSra9W7cQ",
         "outputId": "b218e7a8-8e1d-46d3-f377-4fb4def70e0a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2433,7 +2432,7 @@
         "id": "n1lr9jc2XHr_",
         "outputId": "3938e8aa-4f4a-4a39-e9ba-185abde7bf43"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2466,7 +2465,7 @@
         "id": "mzLsVGKrYZAu",
         "outputId": "b2497abc-576a-4781-e3b9-64fa3d5e436d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2511,7 +2510,7 @@
         "id": "pLXYaMg5YoQ-",
         "outputId": "95925dfb-4063-49a4-e6bc-ab80ad022f0d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2556,7 +2555,7 @@
         "id": "O4i8ei-UZiRg",
         "outputId": "06d979fe-dd5d-484a-8835-d674ea04619d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2589,7 +2588,7 @@
         "id": "bvsqd1MGZziw",
         "outputId": "5200c2b0-a091-4607-cf10-a93443054bc7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2635,7 +2634,7 @@
         "id": "TQdTxNemaS6q",
         "outputId": "c51639eb-ce55-43f5-a6f9-38929c715f4e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2669,7 +2668,7 @@
         "id": "biez3de2bEP0",
         "outputId": "3ce824a5-860e-4d9f-a5ee-4222024d62d0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2713,7 +2712,7 @@
         "id": "svtggzjFbcTX",
         "outputId": "98fe1932-1824-4a10-9955-b8252e71b555"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2743,7 +2742,7 @@
         "id": "heJO2cqYbiPB",
         "outputId": "cc90094f-3183-47c2-d8ec-3bf70c62f502"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2770,7 +2769,7 @@
         "id": "1UJTuS09bmT4",
         "outputId": "af7bb045-557e-436f-f22f-905953895c11"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2812,7 +2811,7 @@
         "id": "sIOwJdnTbvV9",
         "outputId": "86cb525c-3f87-449e-f8b3-95047418b4ae"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2838,13 +2837,13 @@
         "    print(i)"
       ],
       "metadata": {
+        "id": "Khs2td1Mb1MM",
+        "outputId": "da285479-20f6-45ef-8913-ec1a14d3d764",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Khs2td1Mb1MM",
-        "outputId": "da285479-20f6-45ef-8913-ec1a14d3d764"
+        }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
